# agent-operations

./: .coverage  .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  plan.md  pyproject.toml
coding-agent/: Dockerfile  pyproject.toml
coding-agent/src/openhands_coding_agent/: AGENTS.md  arcadedb_mcp.py  main.py  mcp_config.json  server.py
coding-agent/src/openhands_coding_agent/skills/microsoft-agents/: SKILL.md
coding-agent/src/openhands_coding_agent/skills/plan/: SKILL.md
coding-agent/src/openhands_coding_agent/skills/research/: SKILL.md
coding-agent/tests/: test_main.py  test_prompts.py
config/: __init__.py  (+1 more)
langgraph-agents/: .coverage  Dockerfile  lambda_handler.py  mypy.ini  pyproject.toml  ruff.toml  skills-lock.json
langgraph-agents/agents/exploratory/: __init__.py  nodes.py  state.py
langgraph-agents/agents/implementation/: __init__.py
langgraph-agents/agents/research_plan/: __init__.py  state.py
langgraph-agents/agents/verification/: __init__.py  nodes.py
langgraph-agents/config/reference/: acap_overrides.yaml  mtp.yaml
langgraph-agents/config/reference/mandates/: competitor_monitor.yaml  product_structure.yaml
langgraph-agents/config/schema/: acap_schema.yaml
langgraph-agents/functions/: orchestration.py
langgraph-agents/schema/graph/: __init__.py  node_types.py
langgraph-agents/schema/graph/migrations/: 0001_create_graph_schema.sql
langgraph-agents/schema/identity/: __init__.py  models.py
langgraph-agents/schema/identity/migrations/: 0003_add_mandate_record.sql
langgraph-agents/schema/timeseries/: __init__.py
langgraph-agents/schema/timeseries/migrations/: 0001_create_event_log_types.sql
langgraph-agents/shared/: bedrock_agent.py  postgres.py  status.py
langgraph-agents/shared/acap/: enforcer.py  exceptions.py
langgraph-agents/shared/arcadedb/: __init__.py  client.py  identity.py  timeseries.py
langgraph-agents/shared/mcp/: __init__.py
langgraph-agents/shared/observability/: __init__.py  tracing.py
langgraph-agents/shared/openrouter/: client.py  models.py
langgraph-agents/shared/promotion/: __init__.py  classifier.py
langgraph-agents/tests/integration/: conftest.py  test_arcadedb_integration.py  test_checkpoint_persistence.py  test_exploratory_integration.py  test_orchestration_integration.py  test_verification_integration.py
langgraph-agents/tests/unit/: test_acap_enforcer.py  test_bedrock_agent.py  test_config_loader.py  test_event_schema.py  test_graph_schema.py  test_identity_models.py  test_implementation_agent.py  test_observability.py  test_openrouter_client.py  test_orchestration_agent.py  test_postgres_checkpointer.py  test_promotion.py  test_research_plan_agent.py  test_timeseries_migrations.py
langgraph-agents/tools/: __init__.py
langgraph-agents/ui/: __init__.py  server.py
(+94 files in other folders)
