[project]
name = "coding-agent"
version = "0.1.2"
description = "AI coding agent built with the OpenHands Software Agent SDK"
requires-python = ">=3.12"
dependencies = [
    "openhands-sdk>=1.25.0",
    "openhands-tools>=1.25.0",
    "python-dotenv>=1.1.0",
    "playwright>=1.49.0",
]

[project.scripts]
coding-agent = "openhands_coding_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["src"]
include = [
    "src/openhands_coding_agent/main.py",
    "src/openhands_coding_agent/__init__.py",
    "src/openhands_coding_agent/skills/",
    "src/openhands_coding_agent/AGENTS.md",
    "src/openhands_coding_agent/mcp_config.json",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]
