[project]
name = "agent-operations"
version = "0.1.0"
description = "Agent Operations — an agent platform implementing the ExO 3.0 Intelligence Stack"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=0.1",
    "openai>=1.0",
    "httpx>=0.27",
    "pydantic>=2",
    "pydantic-settings>=2",
    "langfuse>=2",
    "prometheus-client>=0.21",
    "presidio-analyzer>=2",
    "presidio-anonymizer>=2",
    "jsonschema>=4.26.0",
    "pyyaml>=6.0.3",
    "langchain-openrouter>=0.2.3",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8",
    "pytest-cov>=6",
    "pytest-asyncio>=0.24",
    "types-pyyaml>=6.0.12.20260518",
    "types-jsonschema>=4.26.0.20260518",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["agents*", "shared*", "schema*", "config*", "tools*", "functions*"]

[tool.coverage.run]
omit = [
    "agents/verification/__init__.py",
    "agents/research_plan/__init__.py",
]
relative_files = true
